// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > render correctly with buttonType prop 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-transparent text-green-500 border border-green-500 hover:bg-green-100 hover:opacity-100 text-base py-2 px-4"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 2`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-green-500 text-white border border-green-500 hover:bg-green-hover text-base py-2 px-4"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 3`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-yellow-500 text-white border-yellow-500 hover:bg-yellow-600 text-base py-2 px-4"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 4`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-white text-gray-600 hover:bg-gray-100 border hover:border-gray-100 border-gray-300 hover:shadow-md text-base py-2 px-4"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 5`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-black text-white border-black cursor-not-allowed text-base py-2 px-4"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 6`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-red-500 text-white border-red-500 hover:bg-red-600 text-base py-2 px-4"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-green-500 text-white border border-green-500 hover:bg-green-hover text-base py-2 px-4 rounded-full"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 2`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-green-500 text-white border border-green-500 hover:bg-green-hover text-base py-2 px-4 rounded-lg"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 3`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-green-500 text-white border border-green-500 hover:bg-green-hover text-base py-2 px-4 rounded-none"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 4`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-green-500 text-white border border-green-500 hover:bg-green-hover text-base py-2 px-4 rounded-xl"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 5`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-green-500 text-white border border-green-500 hover:bg-green-hover text-base py-2 px-4 rounded-2xl"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 6`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-green-500 text-white border border-green-500 hover:bg-green-hover text-base py-2 px-4"
    data-rac=""
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 7`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center bg-green-500 text-white border border-green-500 hover:bg-green-hover text-base py-2 px-4 rounded-sm"
    data-rac=""
    type="button"
  />
</div>
`;
